docs/stylesheet/extra.css
/* ... */
/* Arduino ========================================================================== */
.md-typeset .admonition.arduino,
.md-typeset details.arduino {
  border-color: #005c5f;
}
.md-typeset .arduino > .admonition-title,
.md-typeset .arduino > summary {
  background-color: rgba(0, 92, 95, 0.1);
}
.md-typeset .arduino > .admonition-title::before,
.md-typeset .arduino > summary::before {
  background-color: #005c5f;
  -webkit-mask-image: var(--md-admonition-icon--arduino);
          mask-image: var(--md-admonition-icon--arduino);
}


/* Python =========================================================================== */
.md-typeset .admonition.python,
.md-typeset details.python {
  border-color: #3776ab;
}
.md-typeset .python > .admonition-title,
.md-typeset .python > summary {
  background-color: #1e415e;
}
.md-typeset .python > .admonition-title::before,
.md-typeset .python > summary::before {
  background-color: #3776ab;
  -webkit-mask-image: var(--md-admonition-icon--python);
          mask-image: var(--md-admonition-icon--python);
}


/* Code ============================================================================= */
.md-typeset .admonition.code,
.md-typeset details.code {
  border-color: #9e9e9e;
}
.md-typeset .code > .admonition-title,
.md-typeset .code > summary {
  background-color: rgba(158, 158, 158, 0.1);
}
.md-typeset .code > .admonition-title::before,
.md-typeset .code > summary::before {
  background-color: #9e9e9e;
  -webkit-mask-image: var(--md-admonition-icon--code);
          mask-image: var(--md-admonition-icon--code);
}


/* Terminal ========================================================================= */
.md-typeset .admonition.terminal,
.md-typeset details.terminal {
  border-color: #9e9e9e;
}
.md-typeset .terminal > .admonition-title,
.md-typeset .terminal > summary {
  background-color: rgba(158, 158, 158, 0.1);
}
.md-typeset .terminal > .admonition-title::before,
.md-typeset .terminal > summary::before {
  background-color: #9e9e9e;
  -webkit-mask-image: var(--md-admonition-icon--terminal);
          mask-image: var(--md-admonition-icon--terminal);
}


/* Serial Monitor =================================================================== */
.md-typeset .admonition.serial,
.md-typeset details.serial {
  border-color: #9e9e9e;
}
.md-typeset .serial > .admonition-title,
.md-typeset .serial > summary {
  background-color: rgba(158, 158, 158, 0.1);
}
.md-typeset .serial > .admonition-title::before,
.md-typeset .serial > summary::before {
  background-color: #9e9e9e;
  -webkit-mask-image: var(--md-admonition-icon--serial);
          mask-image: var(--md-admonition-icon--serial);
}


/* Hot ============================================================================== */
.md-typeset .admonition.hot,
.md-typeset details.hot {
  border-color: #ff1744;
}
.md-typeset .hot > .admonition-title,
.md-typeset .hot > summary {
  background-color: #ff17441a;
}
.md-typeset .hot > .admonition-title::before,
.md-typeset .hot > summary::before {
  background-color: #ff1744;
  -webkit-mask-image: var(--md-admonition-icon--hot);
          mask-image: var(--md-admonition-icon--hot);
}



/* ================================================================================== */
/* Header Permalinks                                                                  */
/* ================================================================================== */
/* https://github.com/squidfunk/mkdocs-material/discussions/3535 */

.headerlink {
	--permalink-size: 16px; /* for font-relative sizes, 0.6em is a good choice */
	--permalink-spacing: 4px;

	width: calc(var(--permalink-size) + var(--permalink-spacing));
	height: var(--permalink-size);
	vertical-align: middle;
	background-color: var(--md-default-fg-color--lighter);
	background-size: var(--permalink-size);
	mask-size: var(--permalink-size);
	-webkit-mask-size: var(--permalink-size);
	mask-repeat: no-repeat;
	-webkit-mask-repeat: no-repeat;
	visibility: visible;
  -webkit-mask-image: var(--md-admonition-icon--link);
          mask-image: var(--md-admonition-icon--link);
}

[id]:target .headerlink {
	background-color: var(--md-typeset-a-color);
}

.headerlink:hover {
	background-color: var(--md-accent-fg-color) !important;
}

/* Breaks Abbreviations */
/* @media screen and (min-width: 76.25em) {
	h1, h2, h3, h4, h5, h6 {
		display: flex;
		align-items: center;
		flex-direction: row;
	} */

  /* Sets icon location to left of header */
	/* .headerlink {
		order: -1;
		margin-left: calc(var(--permalink-size) * -1 - var(--permalink-spacing)) !important;
	}
} */



/* ================================================================================== */
/* Grid Cards                                                                     */
/* ================================================================================== */

/* Sets grid width for introduction */
.grid.cards.desc {
  grid-template-columns: 35% 65%;
}

/* Sets images size in grid cards */
.md-typeset .grid ul figure img {
  width: 100%;
  max-width: 200px;
}

/* Add compatibility to mobile platforms - by setting minimum width for grid cards */
@media (max-width: 750px) {
  .grid.cards.desc {
    grid-template-columns: 100%;
  }
  /* .grid.cards.show {
    grid-template-columns: 100%;
  } */
}


/* ================================================================================== */
/* YouTube Videos                                                                    */
/* ================================================================================== */

/* Auto adjust embedded youtube videos size */
/* Aspect ratio: height = 56.25% of width */
/* 90vw = 90% of (viewport width) */

.video-container {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  height: 0;
}
.video-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.video {
  position: relative;
  width: 100%;
}
/* ... */

